# ductape

./: .gitignore  Pipfile  README.md  mos_moss.py  pyproject.toml  run_moss.py  zipfile_check.py
ductape/: file_handler.py  main.py  models.py  plagiarism.py  zipfile_check.py
mos_moss/: config.py  file_handler.py  main.py  models.py  plagiarism.py  zipfile_check.py
starters/csc340/Assignment-03-Code/: Assignment-03_PA_Run2.txt
